// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders a BodyText component 1`] = `
<Text
  style={
    Array [
      Object {
        "color": "#4D5061",
        "fontFamily": "apercu",
        "fontSize": 16,
        "marginBottom": 1,
        "marginTop": 1,
      },
      undefined,
    ]
  }
>
  Hello World! This is a BodyText component.
</Text>
`;

exports[`renders a SubtitleText component 1`] = `
<Text
  style={
    Array [
      Object {
        "color": "#4D5061",
        "fontFamily": "apercu-bold",
        "fontSize": 28,
        "marginBottom": 2,
        "marginTop": 8,
      },
      undefined,
    ]
  }
>
  Hello World! This is a SubtitleText component.
</Text>
`;

exports[`renders a TitleText component 1`] = `
<Text
  style={
    Array [
      Object {
        "color": "#4D5061",
        "fontFamily": "apercu-bold",
        "fontSize": 35,
        "marginBottom": 10,
        "marginTop": 1,
      },
      Object {},
    ]
  }
>
  Hello World! This is a TitleText component.
</Text>
`;
